--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .nav-rapper{
-    display: flex;
+    display: grid;
     justify-content: space-between;
 }
 .left-side{
@@ -11,10 +11,10 @@
     font-size: 20px;
     padding-top: 150px;
 }
-.nav-rapper > .left-side > div{
+/* .nav-rapper > .left-side > div{
     margin-right: 30px;
-    font-size: 20px;
-}
+    font-size: 20px; 
+}*/
 .nav-rapper > .right-side > div{
     margin-right: 30px;
     font-size: 20px;
@@ -25,14 +25,323 @@
 a{
     text-decoration: none;
     margin-right: 20px;
-    color: white;
+    color: darkslategray;
+    text-transform: uppercase;
+    font-weight: bold ;
+    font-size: 20px;
 
 }
 body {
-  background-image: url('https://funcakes.com/content/uploads/2021/02/Red-Velvet-Cake-with-Fruit-960x720-c-default.jpg'); 
+  background-image: url(/images/background.jpg); 
   background-repeat: no-repeat;
-  background-size: 700px;
+  /* background-size: 700px; */
+  background-size: cover;  
+
+  background-attachment: fixed; 
+   background-position: left; 
 }
+.cupcakes {
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+    margin-right: 20px;
+    padding-left: 20px;
+    text-align: center;
+}
+.cupcake1 {
+    margin: 30px;
+}
+.cupcake2 {
+    margin: 30px;
+}
+.cupcake3 {
+    margin: 30px;
+}
+.cupcake4 {
+    margin: 30px;
+}
+.cupcake5 {
+    margin: 30px;
+}
+.cupcake6 {
+    margin: 30px;
+}
+.cupcake7 {
+    margin: 30px;
+}
+.cupcake8 {
+    margin: 30px;
+}
+
+
+
+
+
+
+
+.WeddingCakes {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 20px;
+    margin-right: 20px;
+    padding-left: 20px;
+    text-align: center;
+}
+
+.wedcake1 {
+    margin: 30px;
+}
+
+.wedcake2 {
+    margin: 30px;
+}
+
+.wedcake3 {
+    margin: 30px;
+}
+
+.wedcake4 {
+    margin: 30px;
+}
+
+.wedcake5 {
+    margin: 30px;
+}
+
+.wedcake6 {
+    margin: 30px;
+}
+
+.wedcake7 {
+    margin: 30px;
+}
+
+.wedcake8 {
+    margin: 30px;
+}
+
   
+
+/* 
+.Home-page {
+    display: flex;
+    background-image: url("https://img.freepik.com/free-photo/frame-food-ingredients-baking-gently-pink-pastel-surface_127032-2140.jpg " );
+}
+
+.nav-class {
+    padding: 0px 40px 0px 0px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.3em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.main-nav {
+    padding: 10px;
+    text-align: center;
+    position: center;
+}
+
+.logo {
+    padding: 10px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    text-align: center;
+    position: center;
+}
+
+.cupcake {
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+    margin-right: 20px;
+    padding-left: 20px;
+    text-align: center;
+}
+
+.cupcake1 {
+    margin: 30px;
+}
+.cupcake2 {
+    margin: 30px;
+}
+.cupcake3 {
+    margin: 30px;
+}
+.cupcake4 {
+    margin: 30px;
+}
+.cupcake5 {
+    margin: 30px;
+}
+.cupcake6 {
+    margin: 30px;
+}
+.cupcake7 {
+    margin: 30px;
+}
+.cupcake8 {
+    margin: 30px;
+}
+
+.Tortas {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 20px;
+    margin-right: 20px;
+    padding-left: 20px;
+    text-align: center;
+}
+
+.tortas1 {
+    margin: 30px;
+}
+
+.tortas2 {
+    margin: 30px;
+}
+
+.tortas3 {
+    margin: 30px;
+}
+
+.tortas4 {
+    margin: 30px;
+}
+
+.tortas5 {
+    margin: 30px;
+}
+
+.tortas6 {
+    margin: 30px;
+}
+
+.tortas7 {
+    margin: 30px;
+}
+
+.tortas8 {
+    margin: 30px;
+}
+
+.a .nav-class {
+    padding: 4px 15px;
+}
+
+.container {
+    position: relative;
+    width: 50%;
+}
+
+.image {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+}
+
+.container:hover .overlay {
+    bottom: 0;
+    height: 100%;
+}
+
+.text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.Owner #img {
+    border-radius: 50%;
+}
+
+.icon {
+    display: flex;
+    margin-left: 10px;
+}
+
+.facebook {
+    display: flex;
+    margin-left: 30px;
+    margin-right: 50px;
+}
+
+.instragrame {
+    display: flex;
+    margin-left: 30px;
+    margin-right: 50px;
+}
+
+.WhatsApp {
+    display: flex;
+    margin-left: 30px;
+    margin-right: 50px;
+}
+
+/* For desktops: 
+@media only screen and (min-width: 992px) {
+
+    #grid-floats .grid-item,
+    #grid-flex .grid-item {
+        width: 25%;
+    }
+
+    #grid-floats .grid-item:nth-child(1) {
+        width: 47%;
+    }
+
+    #grid-floats .grid-item:nth-child(2) {
+        width: 23%;
+    }
+}
+
+/* For tablets: 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+
+    #grid-floats .grid-item,
+    #grid-flex .grid-item {
+        width: 33.33%;
+    }
+
+    #grid-floats .grid-item:nth-child(1) {
+        width: 48.5%;
+    }
+
+    #grid-floats .grid-item:nth-child(2) {
+        width: 48.5%;
+    }
+}
+
+ For mobile: 
+@media only screen and (min-width: 375px) and (max-width: 812px) {
+
+    #grid-floats .grid-item,
+    #grid-flex .grid-item {
+        width: 50%;
+    }
+
+    #grid-floats .grid-item:nth-child(1) {
+        width: 97.5%;
+    }
+} */
 
   
