--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,89 @@
 .nav-rapper{
-    display: grid;
+    display: flex;
     justify-content: space-between;
 }
+
 .left-side{
     display: flex;
+    
 }
-.right-side{
+/* .right-side{
     padding: 20px;
     margin-right: 50px;
     font-size: 20px;
     padding-top: 150px;
-}
-/* .nav-rapper > .left-side > div{
+} */
+/*
+.nav-rapper > .left-side > div{
     margin-right: 30px;
     font-size: 20px; 
-}*/
+}
 .nav-rapper > .right-side > div{
     margin-right: 30px;
     font-size: 20px;
     padding-left: 50px;
 
-}
+} */
 
 a{
     text-decoration: none;
     margin-right: 20px;
-    color: darkslategray;
+    color: rgb(14, 77, 14);
     text-transform: uppercase;
     font-weight: bold ;
-    font-size: 20px;
+    font-size: 40px;
+    
 
 }
+a:hover{
+    opacity: 0.7;
+    color: rgb(158, 189, 20);
+}
+
+.x{
+    color: black;
+    font-size: 25px;
+    font-weight: bold;
+    
+
+} 
 body {
-  background-image: url(/images/background.jpg); 
+  background-image: url(/images/backgroundwater.jpg); 
   background-repeat: no-repeat;
   /* background-size: 700px; */
   background-size: cover;  
 
-  background-attachment: fixed; 
-   background-position: left; 
+background-attachment: fixed;  
+   
 }
 .cupcakes {
     display: flex;
-    flex-direction: row;
-    margin: 20px;
-    margin-right: 20px;
-    padding-left: 20px;
+    flex-flow: row wrap;
+    width: 100%;
+    justify-content: space-evenly;
+    align-content: space-between;
     text-align: center;
+    /* display: flex;
+    flex-flow: row wrap;
+    display: flex;
+    justify-content: left;  */
+    /* flex-direction: row;  */
+    /* margin: 20px; */
+    /* margin-right: 20px; */
+    /* padding-left: 20px; */
+    /* text-align: center; */
+
+    /* display: grid;
+    grid-template-columns: 1fr 1fr 1fr; */
+    
+    
+
+    /* grid-template-columns: 200px 200px 200px auto;  */
+    /* grid-template-rows: auto; Three rows, two with explicit widths  */
+    /* grid-template-areas:
+      "header header header"
+      ". main sidebar"
+      "footer . ."; */
 }
 .cupcake1 {
     margin: 30px;
@@ -74,19 +111,40 @@ body {
 }
 
 
+p{
+    color: black;
+    font-size: 25px;
+    font-weight: bold;
+   
 
 
+}
+
+#home{
+    color: rgb(13, 14, 11);
+    font-size: 25px;
+    font-weight: bold;
+}
 
 
-
-.WeddingCakes {
+.weddingCakes {
+    /* display: grid; */
+    /* grid-template-columns: 200px 200px 200px auto; */
+    /* grid-template-columns: 1fr 1fr 1fr 1fr; */
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
+    width: 100%;
+    justify-content: space-evenly;
+    align-content: space-between;
+    text-align: center;
+     
+    /* display: flex;
+    flex-direction: column;
+     flex-wrap: wrap; 
     margin: 20px;
     margin-right: 20px;
     padding-left: 20px;
-    text-align: center;
+    text-align: center; */
 }
 
 .wedcake1 {
@@ -120,172 +178,36 @@ body {
 .wedcake8 {
     margin: 30px;
 }
+.footer {
+    display: flex;
+    margin-top: 450px;
+    /* position: fixed; */
+    
+    bottom: 0; 
+    width: 100%;
+    text-align: center;
 
+    justify-content: space-evenly;
+    /* align-content: space-between; */
+   
+  }
   
-
-/* 
-.Home-page {
-    display: flex;
-    background-image: url("https://img.freepik.com/free-photo/frame-food-ingredients-baking-gently-pink-pastel-surface_127032-2140.jpg " );
-}
-
-.nav-class {
-    padding: 0px 40px 0px 0px;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 1.3em;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-.main-nav {
-    padding: 10px;
-    text-align: center;
-    position: center;
-}
-
-.logo {
-    padding: 10px;
-    margin-top: 50px;
-    margin-bottom: 30px;
-    text-align: center;
-    position: center;
-}
-
-.cupcake {
-    display: flex;
-    flex-direction: row;
-    margin: 20px;
-    margin-right: 20px;
-    padding-left: 20px;
-    text-align: center;
-}
-
-.cupcake1 {
-    margin: 30px;
-}
-.cupcake2 {
-    margin: 30px;
-}
-.cupcake3 {
-    margin: 30px;
-}
-.cupcake4 {
-    margin: 30px;
-}
-.cupcake5 {
-    margin: 30px;
-}
-.cupcake6 {
-    margin: 30px;
-}
-.cupcake7 {
-    margin: 30px;
-}
-.cupcake8 {
-    margin: 30px;
-}
-
-.Tortas {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 20px;
-    margin-right: 20px;
-    padding-left: 20px;
-    text-align: center;
-}
-
-.tortas1 {
-    margin: 30px;
-}
-
-.tortas2 {
-    margin: 30px;
-}
-
-.tortas3 {
-    margin: 30px;
-}
-
-.tortas4 {
-    margin: 30px;
-}
-
-.tortas5 {
-    margin: 30px;
-}
-
-.tortas6 {
-    margin: 30px;
-}
-
-.tortas7 {
-    margin: 30px;
-}
-
-.tortas8 {
-    margin: 30px;
-}
-
-.a .nav-class {
-    padding: 4px 15px;
-}
-
-.container {
-    position: relative;
-    width: 50%;
-}
-
-.image {
-    display: block;
-    width: 100%;
-    height: auto;
-}
-
-.overlay {
-    position: absolute;
-    bottom: 100%;
-    left: 0;
-    right: 0;
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: .5s ease;
-}
-
-.container:hover .overlay {
-    bottom: 0;
-    height: 100%;
-}
-
-.text {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-
-.Owner #img {
-    border-radius: 50%;
-}
-
-.icon {
+  
+  .icons {
     display: flex;
     margin-left: 10px;
+    
 }
 
 .facebook {
     display: flex;
     margin-left: 30px;
     margin-right: 50px;
+    
+    
 }
 
-.instragrame {
+.instagram {
     display: flex;
     margin-left: 30px;
     margin-right: 50px;
@@ -296,52 +218,8 @@ body {
     margin-left: 30px;
     margin-right: 50px;
 }
+  
 
-/* For desktops: 
-@media only screen and (min-width: 992px) {
 
-    #grid-floats .grid-item,
-    #grid-flex .grid-item {
-        width: 25%;
-    }
-
-    #grid-floats .grid-item:nth-child(1) {
-        width: 47%;
-    }
-
-    #grid-floats .grid-item:nth-child(2) {
-        width: 23%;
-    }
-}
-
-/* For tablets: 
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-
-    #grid-floats .grid-item,
-    #grid-flex .grid-item {
-        width: 33.33%;
-    }
-
-    #grid-floats .grid-item:nth-child(1) {
-        width: 48.5%;
-    }
-
-    #grid-floats .grid-item:nth-child(2) {
-        width: 48.5%;
-    }
-}
-
- For mobile: 
-@media only screen and (min-width: 375px) and (max-width: 812px) {
-
-    #grid-floats .grid-item,
-    #grid-flex .grid-item {
-        width: 50%;
-    }
-
-    #grid-floats .grid-item:nth-child(1) {
-        width: 97.5%;
-    }
-} */
 
   
